; ModuleID = '/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_testLoops.c_writeErrorFound.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_testLoops.c_writeErrorFound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@errorCount = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Errors found in \00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c":\0A\00", align 1
@stop = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@anyErrors = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @writeErrorFound to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @writeErrorFound(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 @fputc(i8 signext 13, i32 %3)
  %5 = load i32, i32* @errorCount, align 4
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32, i32* @stdout, align 4
  %9 = call i32 @fputs(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @stdout, align 4
  %11 = call i32 @writeFunctionName(i32 %10)
  %12 = load i32, i32* @stdout, align 4
  %13 = call i32 @fputs(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %7, %1
  %15 = load i64, i64* @stop, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @writeTestsPerformed(i32 %18)
  %20 = call i32 (...) @exitWithStatus()
  br label %21

21:                                               ; preds = %17, %14
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* @anyErrors, align 4
  ret void
}

declare dso_local i32 @fputc(i8 signext, i32) #1

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @writeFunctionName(i32) #1

declare dso_local i32 @writeTestsPerformed(i32) #1

declare dso_local i32 @exitWithStatus(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
